fix(material/core): better handling of css variables in theme palettes
Technically we don't support theming using CSS variables, but the community has started depending on it anyway since it happened to work. This was broken during the switch to MDC which is blocking users from updating to v15.

These changes make a best effort to avoid all the errors and reduce the amount of warnings as much as possible.

A couple of disclaimers:
* All the places where we were manipulating colors are going to compile now, but they might not look great. This is only going to affect some MDC components though, the legacy components will work as expected.
* One warning might be logged from the themes for components based on MDC's list. They will compile and look acceptable, but I couldn't find a good way to avoid the error with our current setup. We will be able to avoid the warning once we switch the components to the token theming APIs.

Relates to #25981.

--- a/src/material/core/theming/tests/test-css-variables-theme.scss
+++ b/src/material/core/theming/tests/test-css-variables-theme.scss
@@ -1,17 +1,18 @@
 @use 'sass:map';
 @use 'sass:meta';
 @use '../all-theme';
+@use '../../typography/all-typography';
 @use '../palette';
 @use '../theming';
 @use '../../../legacy-core/theming/all-theme' as legacy-all-theme;
 
 // Recursively replaces all of the values inside a Sass map with a different value.
-@function replace-all-values($palette, $replacement) {
+@function _replace-all-values($palette, $replacement) {
   $output: ();
 
   @each $key, $value in $palette {
     @if (meta.type-of($value) == 'map') {
-      $output: map.merge(($key: replace-all-values($value, $replacement)), $output);
+      $output: map.merge(($key: _replace-all-values($value, $replacement)), $output);
     }
     @else {
       $output: map.merge(($key: $replacement), $output);
@@ -29,8 +30,10 @@
       primary: $palette,
       accent: $palette,
       warn: $palette
-    )
+    ),
+    typography: all-typography.define-typography-config(),
   ));
-  $css-var-theme: replace-all-values($theme, var(--test-var));
+  $css-var-theme: _replace-all-values($theme, var(--test-var));
+  @include all-theme.all-component-themes($css-var-theme);
   @include legacy-all-theme.all-legacy-component-themes($css-var-theme);
 }
